# ChangeLog for sci-biology/ffindex
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*ffindex-0.9.9.6 (19 Nov 2015)

  19 Nov 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  +ffindex-0.9.9.6.ebuild, -ffindex-0.9.9.3.ebuild:
  sci-biology/ffindex: fix HOMEPAGE, version bump

  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  sci-biology/ffindex: Add github to remote-id in metadata.xml

  25 May 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  ffindex-0.9.9.3.ebuild:
  sci-biology/ffindex: fix SRC_URI because TransDecoder which contains this
  bundled thing has moved

*ffindex-0.9.9.3 (08 Jan 2015)

  08 Jan 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  +ffindex-0.9.9.3.ebuild, +metadata.xml:
  sci-biology/ffindex: new package, maybe fits better under some other herd?