@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  19 Nov 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
+  ffindex-0.9.9.6.ebuild:
+  sci-biology/ffindex: add optional USE=mpi
+
 *ffindex-0.9.9.6 (19 Nov 2015)
 
   19 Nov 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
